feat: Add new dashboard/employee route and enhance dashboard layout with theme provider

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -14,7 +14,10 @@
   --color-custom-grey-700: #323b49;
   --color-custom-grey-600: #687588;
   --color-custom-grey-500: #a0aec0;
-  --color-custom-grey-300: #E9EAEC;
+  --color-custom-grey-400: #cbd5e0;
+  --color-custom-grey-300: #e9eaec;
+  --color-custom-grey-200: #f1f2f4;
+  --color-custom-grey-100: #f8f8f8;
   --color-custom-grey-50: #fafafa;
   --color-custom-base-green: #27a376;
   --color-custom-base-red: #e03137;
